Open media url for amendment act selected

--- a/src/app/views/land-controls/recording-views-buttons/recording-views-buttons.component.html
+++ b/src/app/views/land-controls/recording-views-buttons/recording-views-buttons.component.html
@@ -1,7 +1,7 @@
 <div fxFlex="70px" [style.paddingTop.px]="2">
 
   <button type="button" class="btn" fxFlex="62px"
-    (click)="onStampMediaClicked()">
+    (click)="onRecordingMediaClicked()">
     Sello
   </button>
 
