--- a/src/app/views/registration/recording-acts/recording-act-creator.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-creator.component.html
@@ -136,7 +136,8 @@
 
           </emp-ng-select>
 
-          <emp-land-recording-views-buttons fxFlex="70px">
+          <emp-land-recording-views-buttons fxFlex="70px"
+            [recordingMedia]="amendmentRecordingActSelected.recordingData.media">
 
           </emp-land-recording-views-buttons>
 
