--- a/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
+++ b/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
@@ -1,110 +1,116 @@
-<div class="section-title">Historia registral</div>
 
-<div class="tab-container scrollable-container mat-elevation-z1" [empNgSpinnerHost]="spinner">
+<div fxLayout="column" fxFlexFill>
 
-  <emp-ng-spinner #spinner [visible]="submitted || isLoading ">
+  <div class="section-title">Historia registral</div>
 
-  </emp-ng-spinner>
 
-  <table mat-table [dataSource]="dataSource">
+  <div class="tab-container scrollable-container mat-elevation-z1" [empNgSpinnerHost]="spinner">
 
-    <ng-container matColumnDef="rowIndex">
-      <th mat-header-cell *matHeaderCellDef> # </th>
-      <td mat-cell *matCellDef="let row; let i = index;"> <strong>{{i + 1}}</strong> </td>
-    </ng-container>
+    <emp-ng-spinner #spinner [visible]="submitted || isLoading ">
 
-    <ng-container matColumnDef="issuedAndRequestedTime">
-      <th mat-header-cell *matHeaderCellDef> Registrado el </th>
-      <td mat-cell *matCellDef="let row" class="nowrap">
-        R: {{ row.recordingData.recordingTime | dateTimeFormat }}
-        <br>
-        P: {{ row.recordingData.presentationTime | dateTimeFormat }}
-      </td>
-    </ng-container>
+    </emp-ng-spinner>
 
-    <ng-container matColumnDef="recordingAct">
-      <th mat-header-cell *matHeaderCellDef class="nowrap"> Acto jurídico </th>
-      <td mat-cell *matCellDef="let row">
-        <a class="link" (click)="onOpenRecordingActEditor(row)">
-          {{ row.name }}
-        </a>
-      </td>
-    </ng-container>
+    <table mat-table [dataSource]="dataSource">
 
-    <ng-container matColumnDef="subjectChanges">
-      <th mat-header-cell *matHeaderCellDef> Descripción </th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.description }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="rowIndex">
+        <th mat-header-cell *matHeaderCellDef> # </th>
+        <td mat-cell *matCellDef="let row; let i = index;"> <strong>{{i + 1}}</strong> </td>
+      </ng-container>
 
-    <ng-container matColumnDef="recordLink">
-      <th mat-header-cell *matHeaderCellDef> Registrado en </th>
-      <td mat-cell *matCellDef="let row">
-        <a class="link" (click)="onOpenBookEntry(row)">
-          {{ row.recordingData.description }}
-        </a>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="issuedAndRequestedTime">
+        <th mat-header-cell *matHeaderCellDef> Registrado el </th>
+        <td mat-cell *matCellDef="let row" class="nowrap">
+          R: {{ row.recordingData.recordingTime | dateTimeFormat }}
+          <br>
+          P: {{ row.recordingData.presentationTime | dateTimeFormat }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Estado </th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.status }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef> </th>
-      <td mat-cell *matCellDef="let row" class="column-action">
-        <mat-icon *ngIf="row.actions.canBeDeleted"
-          (click)="onRemoveRecordingActClicked(row)"
-          title="Eliminar este acto">
-          delete
-        </mat-icon>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="recordingAct">
+        <th mat-header-cell *matHeaderCellDef class="nowrap"> Acto jurídico </th>
+        <td mat-cell *matCellDef="let row">
+          <a class="link" (click)="onOpenRecordingActEditor(row)">
+            {{ row.name }}
+          </a>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+      <ng-container matColumnDef="subjectChanges">
+        <th mat-header-cell *matHeaderCellDef> Descripción </th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.description }}
+        </td>
+      </ng-container>
 
-  <div *ngIf="!dataSource?.data || dataSource?.data.length === 0" class="text-not-found">
-    <p>No se han registrado actos jurídicos al predio.</p>
+      <ng-container matColumnDef="recordLink">
+        <th mat-header-cell *matHeaderCellDef> Registrado en </th>
+        <td mat-cell *matCellDef="let row">
+          <a class="link" (click)="onOpenBookEntry(row)">
+            {{ row.recordingData.description }}
+          </a>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> Estado </th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.status }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef> </th>
+        <td mat-cell *matCellDef="let row" class="column-action">
+          <mat-icon *ngIf="row.actions.canBeDeleted"
+            (click)="onRemoveRecordingActClicked(row)"
+            title="Eliminar este acto">
+            delete
+          </mat-icon>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <div *ngIf="!dataSource?.data || dataSource?.data.length === 0" class="text-not-found">
+      <p>No se han registrado actos jurídicos al predio.</p>
+    </div>
+
   </div>
+
+
+  <ng-container *ngIf="tractIndex.actions.canBeClosed ||
+                      tractIndex.actions.canBeOpened ||
+                      tractIndex.actions.canBeUpdated">
+
+    <mat-divider class="divider-padding"></mat-divider>
+
+    <div fxLayout="row" [style.marginRight.px]="8">
+
+      <div fxFlex fxLayoutAlign="start">
+        <button type="button" class="btn" *ngIf="tractIndex.actions.canBeClosed"
+          (click)="onCloseTractIndex()">
+          Cerrar la historia registral
+        </button>
+
+        <button type="button" class="btn" *ngIf="tractIndex.actions.canBeOpened"
+          (click)="onOpenTractIndex()">
+          Editar la historia registral
+        </button>
+      </div>
+
+      <div fxFlex fxLayoutAlign="end" *ngIf="tractIndex.actions.canBeUpdated">
+        <button type="submit" class="btn-action"
+        (click)="onOpenRecordingActCreator()">
+          Agregar un acto a la historia
+        </button>
+      </div>
+
+    </div>
+
+  </ng-container>
 
 </div>
-
-
-<ng-container *ngIf="tractIndex.actions.canBeClosed ||
-                     tractIndex.actions.canBeOpened ||
-                     tractIndex.actions.canBeUpdated">
-
-  <mat-divider class="divider-padding"></mat-divider>
-
-  <div fxLayout="row" [style.marginRight.px]="8">
-
-    <div fxFlex fxLayoutAlign="start">
-      <button type="button" class="btn" *ngIf="tractIndex.actions.canBeClosed"
-        (click)="onCloseTractIndex()">
-        Cerrar la historia registral
-      </button>
-
-      <button type="button" class="btn" *ngIf="tractIndex.actions.canBeOpened"
-        (click)="onOpenTractIndex()">
-        Editar la historia registral
-      </button>
-    </div>
-
-    <div fxFlex fxLayoutAlign="end" *ngIf="tractIndex.actions.canBeUpdated">
-      <button type="submit" class="btn-action"
-       (click)="onOpenRecordingActCreator()">
-        Agregar un acto a la historia
-      </button>
-    </div>
-
-  </div>
-
-</ng-container>
 
 
 <emp-land-recording-act-creator-modal *ngIf="displayRecordingActCreator"
