--- a/src/app/views/registration/registry-entry/registry-entry-editor.component.html
+++ b/src/app/views/registration/registry-entry/registry-entry-editor.component.html
@@ -43,6 +43,7 @@
 
         <emp-land-recordable-subject-history
           [tractIndex]="tractIndex"
+          [recordingActUID]="displayRecordingAct ? data.recordingActUID : null"
           [isLoading]="isLoading"
           (recordableSubjectHistoryEvent)="onRecordableSubjectHistoryEvent($event)">
 
