--- a/src/styles/list.scss
+++ b/src/styles/list.scss
@@ -36,6 +36,10 @@ $box-shadow: 0 3px 1px -2px rgba(44, 57, 66, 0.1),
   }
 }
 
+.list-selection-header.slim {
+  margin-right: 8px !important;
+}
+
 .list-container {
   background: #fafafa;
   margin-right: 8px;
@@ -59,6 +63,15 @@ $box-shadow: 0 3px 1px -2px rgba(44, 57, 66, 0.1),
 .list-item:hover {
   .ghost-icon {
     color: $icon-color;
+  }
+}
+
+.list-item.slim {
+
+  .list-container {
+    margin: 0;
+    padding: 3px;
+    width: 100%
   }
 }
 
