Open amended act media data

--- a/src/app/views/registration/recording-acts/recording-act-editor.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-editor.component.html
@@ -117,6 +117,11 @@
               <div>{{recordingAct.amendedAct.description}}</div>
             </div>
 
+            <emp-land-recording-views-buttons fxFlex="70px" fxFlex.lt-md="none"
+              [recordingMedia]="recordingAct.amendedAct.recordingData.media">
+
+            </emp-land-recording-views-buttons>
+
           </div>
 
         </div>
