Add nested view to recordable-subject-history

--- a/src/app/views/land-controls/recording-book-selector/recording-book-selector.component.html
+++ b/src/app/views/land-controls/recording-book-selector/recording-book-selector.component.html
@@ -104,8 +104,7 @@
         <mat-checkbox fxlayout="row"
           [(ngModel)]="checkBookEntryInput"
           [ngModelOptions]="{standalone: true}"
-          (change)="onCheckBookEntryInputChanged()"
-          style="display: block; margin-top: -3px;">
+          (change)="onCheckBookEntryInputChanged()">
           Agregar inscripción
         </mat-checkbox>
 
