--- a/src/styles/reporting-formats.scss
+++ b/src/styles/reporting-formats.scss
@@ -50,6 +50,37 @@ table.mat-table tr.mat-row {
       background-color: darken($grid-footer-background-color, 5%);
     }
   }
+
+  &.nested {
+    td:first-of-type {
+      padding: 10px 16px;
+    }
+
+    td:nth-child(2) {
+      padding-left: 10px;
+    }
+  }
+
+  &.parent {
+    background: $grid-nested-background-color;
+
+    td {
+      border-bottom: $grid-nested-border;
+    }
+  }
+
+  &.child {
+    font-style: italic;
+
+    td:first-of-type {
+      padding-left: 32px;
+      border-right: $grid-nested-border;
+    }
+
+    td:nth-child(3) {
+      padding-left: 16px;
+    }
+  }
 }
 
 //
