--- a/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
+++ b/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
@@ -14,15 +14,17 @@
 
       <ng-container matColumnDef="rowIndex">
         <th mat-header-cell *matHeaderCellDef> # </th>
-        <td mat-cell *matCellDef="let row; let i = index;"> <strong>{{i + 1}}</strong> </td>
+        <td mat-cell *matCellDef="let row; let i = index;" [class.bold-text]="!row.isChild">
+          {{row.number}}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="issuedAndRequestedTime">
         <th mat-header-cell *matHeaderCellDef> Registrado el </th>
-        <td mat-cell *matCellDef="let row" class="nowrap">
-          R: {{ row.recordingData.recordingTime | dateTimeFormat }}
+        <td mat-cell *matCellDef="let row" class="nowrap" [class.margin-left]="checkNestedEntries">
+          R: {{ !row.recordingData.recordingTime ? '-' : row.recordingData.recordingTime | dateTimeFormat }}
           <br>
-          P: {{ row.recordingData.presentationTime | dateTimeFormat }}
+          P: {{ !row.recordingData.presentationTime ? '-' : row.recordingData.presentationTime | dateTimeFormat }}
         </td>
       </ng-container>
 
@@ -70,8 +72,12 @@
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-        [class.row-selected]="row.uid === recordingActUID"
-        [title]="row.uid === recordingActUID ? 'Acto jurídico seleccionado' : ''"></tr>
+        [class.bold-text]="row.uid === recordingActUID"
+        [title]="row.uid === recordingActUID ? 'Acto jurídico seleccionado' : ''"
+        [class.nested]="checkNestedEntries"
+        [class.parent]="checkNestedEntries && !row.isChild"
+        [class.child]="checkNestedEntries && row.isChild"></tr>
+
     </table>
 
     <div *ngIf="!dataSource?.data || dataSource?.data.length === 0" class="text-not-found">
@@ -100,6 +106,18 @@
           Editar la historia registral
         </button>
       </div>
+
+      <form class="form-section" fxFlex fxLayoutAlign="center center" *ngIf="hasNestedEntries">
+
+        <mat-checkbox
+          [(ngModel)]="checkNestedEntries"
+          [ngModelOptions]="{standalone: true}"
+          (click)="$event.stopPropagation"
+          (change)="onCheckNestedEntriesClicked()">
+          Anidar actos modificados
+        </mat-checkbox>
+
+      </form>
 
       <div fxFlex fxLayoutAlign="end" *ngIf="tractIndex.actions.canBeUpdated">
         <button type="submit" class="btn-action"
