--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -156,6 +156,7 @@ $grid-hover-background-color: #f5f8fa;
 $grid-selected-background-color: #f0f3f5;
 $grid-selected-hover-background-color: #edf0f3;
 $grid-nested-background-color: #e0e6eb;
+$grid-nested-hover-background-color: #d0dae1;
 $grid-nested-border: 2px solid #859cad;
 $grid-row-height: 35px;
 
