--- a/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
+++ b/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
@@ -10,79 +10,15 @@
 
     </emp-ng-spinner>
 
-    <table mat-table [dataSource]="dataSource">
+    <emp-land-tract-index-entries-table
+      [tractIndexEntriesList]="tractIndex.entries"
+      [tractIndexEntryUID]="recordingActUID"
+      [canDelete]="true"
+      [hasNestedEntries]="hasNestedEntries"
+      [checkNestedEntries]="checkNestedEntries"
+      (tractIndexEntriesTableEvent)="onTractIndexEntriesTableEvent($event)">
 
-      <ng-container matColumnDef="rowIndex">
-        <th mat-header-cell *matHeaderCellDef> # </th>
-        <td mat-cell *matCellDef="let row; let i = index;" [class.bold-text]="!row.isChild">
-          {{row.number}}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="issuedAndRequestedTime">
-        <th mat-header-cell *matHeaderCellDef> Registrado el </th>
-        <td mat-cell *matCellDef="let row" class="nowrap" [class.margin-left]="checkNestedEntries">
-          R: {{ !row.recordingData.recordingTime ? '-' : row.recordingData.recordingTime | dateTimeFormat }}
-          <br>
-          P: {{ !row.recordingData.presentationTime ? '-' : row.recordingData.presentationTime | dateTimeFormat }}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="recordingAct">
-        <th mat-header-cell *matHeaderCellDef class="nowrap"> Acto jurídico </th>
-        <td mat-cell *matCellDef="let row">
-          <a class="link" (click)="onOpenRecordingActEditor(row)">
-            {{ row.name }}
-          </a>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="subjectChanges">
-        <th mat-header-cell *matHeaderCellDef> Descripción </th>
-        <td mat-cell *matCellDef="let row">
-          {{ row.description }}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="recordLink">
-        <th mat-header-cell *matHeaderCellDef> Registrado en </th>
-        <td mat-cell *matCellDef="let row">
-          <a class="link" (click)="onOpenBookEntry(row)">
-            {{ row.recordingData.description }}
-          </a>
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef> Estado </th>
-        <td mat-cell *matCellDef="let row">
-          {{ row.status }}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef> </th>
-        <td mat-cell *matCellDef="let row" class="column-action">
-          <mat-icon *ngIf="row.actions.canBeDeleted"
-            (click)="onRemoveRecordingActClicked(row)"
-            title="Eliminar este acto">
-            delete
-          </mat-icon>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-        [class.bold-text]="row.uid === recordingActUID"
-        [title]="row.uid === recordingActUID ? 'Acto jurídico seleccionado' : ''"
-        [class.nested]="checkNestedEntries"
-        [class.parent]="checkNestedEntries && !row.isChild"
-        [class.child]="checkNestedEntries && row.isChild"></tr>
-
-    </table>
-
-    <div *ngIf="!dataSource?.data || dataSource?.data.length === 0" class="text-not-found">
-      <p>No se han registrado actos jurídicos al predio.</p>
-    </div>
+    </emp-land-tract-index-entries-table>
 
   </div>
 
@@ -112,8 +48,7 @@
         <mat-checkbox
           [(ngModel)]="checkNestedEntries"
           [ngModelOptions]="{standalone: true}"
-          (click)="$event.stopPropagation"
-          (change)="onCheckNestedEntriesClicked()">
+          (click)="$event.stopPropagation">
           Anidar actos modificados
         </mat-checkbox>
 
