--- a/src/styles/angular-material-styles.scss
+++ b/src/styles/angular-material-styles.scss
@@ -304,11 +304,18 @@ table.mat-table {
     }
 
     a.item-link {
-      color: $primary-color-dark;
+      color: $link-color;
     }
 
     a.item-link:hover {
       text-decoration: underline;
+    }
+
+    a.link-highlight {
+      font-size: $font-size-grid * 1.1;
+      color: $primary-color;
+      text-decoration: underline;
+      white-space: nowrap;
     }
   }
 
@@ -693,6 +700,22 @@ table.mat-table {
 .mat-radio-button .mat-radio-inner-circle {
   color: $checkbox-background-color !important;
   background-color: $checkbox-background-color !important;
+}
+
+.radio-group-vertical {
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  align-items: flex-start;
+}
+
+.radio-button-vertical {
+  margin: 8px 8px 8px 0;
+}
+
+.radio-button-vertical ~ .radio-button-vertical {
+  margin-left: 0;
 }
 
 //
